--- a/templates/send_mail/send_mail_to_client.html
+++ b/templates/send_mail/send_mail_to_client.html
@@ -36,10 +36,10 @@
     <hr style="margin: 20px 0px;">
     <h4>Hey {{Name}},</h4>
     <h3>Thanks for the enquiry we have received it,</h3>
-    <p style="font-weight:600;">My name is Vipin, I'm here to welcoming you on behalf of Infograins, I'm a sales director and a founder of Infograins, we will be in touch with you shortly, In a meantime if you have any questions or requirement detail you can revert on this email itself so that based on it we can quickly schedule our discussion or conversation on it.</p>
+    <p style="font-weight:600;">My name is Kapil, I'm here to welcoming you on behalf of Infosense.</p>
     <p style="font-weight:600;">Looking forward to continue our discussion.</p>
     <p style="font-weight:600;">Best Regards,</p>
-    <p style="font-weight:600;">Vipin</p>
+    <p style="font-weight:600;">Kapil</p>
     <p><a target="_blank" style="color: #2c32ee" href="https://infograins.com">www.infograins.com</a></p>
     <p><a target="_blank" style="color: #2c32ee" href="https://www.linkedin.com/in/vipin-shukla-55b8b560/">https://www.linkedin.com/in/vipin-shukla-55b8b560/</a></p>
    
